# export-outlook-to-ics

./: .gitignore  README.md  export-outlook-to-ics.code-workspace  main.py  pyproject.toml
